# rest_api_base

./: README.md  dockerfile
src/: CMakeLists.txt  main.c
src/rest/: CMakeLists.txt  rest.c  rest.h
src/server/: CMakeLists.txt  server.c  server.h
test/rest/: CMakeLists.txt  test_rest.cpp
test/server/: CMakeLists.txt  test_server.cpp
